addresses "Revise CompressionConfig to include minimal methods to change compression #127"